eks/ecommerce-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ecommerce
  name: ingress-ecommerce
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
        - path: /order-receiver
          pathType: Prefix
          backend:
            service:
              name: order-receiver
              port:
                number: 80
        - path: /logistics
          pathType: Prefix
          backend:
            service:
              name: logistics
              port:
                number: 80
        - path: /order-processor
          pathType: Prefix
          backend:
            service:
              name: order-processor
              port:
                number: 80
        - path: /payments
          pathType: Prefix
          backend:
            service:
              name: payments
              port:
                number: 80
        - path: /productviewer
          pathType: Prefix
          backend:
            service:
              name: productviewer
              port:
                number: 80
        - path: /stock
          pathType: Prefix
          backend:
            service:
              name: stock
              port:
                number: 80
